@@ -1,5 +1,7 @@
 2014-06-09  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (do_input): Remove two superfluous false conditions.
+	* src/nano.h, src/text.c (add_undo): Avoid a compiler warning with
+	--disable-wrapping.
 
 2014-06-09  Mark Majeres  <mark@engine12.com>
 	* src/text.c (do_undo, do_redo, add_undo, update_undo, do-wrap):
